--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -46,7 +46,8 @@
   ],
   "scripts": {
     "watch": "cross-env TARGET=development webpack --config build/config.js --progress --watch",
-    "dev": "cross-env NODE_ENV=development webpack serve --config build/webpack.dev.config.js --hot",
+    "dev": "cross-env NODE_ENV=development vite",
+    "dev:ssr": "cross-env NODE_ENV=development vite-ssr",
     "build": "concurrently \"yarn build:dist\" \"yarn build:lib\" -n \"dist,lib\" --kill-others-on-fail -r && yarn build:types",
     "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config build/config.js --progress",
     "build:json": "node build/build-json.js",
@@ -74,8 +75,11 @@
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.10",
     "@types/resize-observer-browser": "^0.1.5",
+    "@vitejs/plugin-vue": "^1.2.3",
+    "@vitejs/plugin-vue-jsx": "^1.1.5",
     "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/test-utils": "2.0.0-beta.13",
+    "@vueuse/head": "^0.6.0",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-add-import-extension": "^1.5.1",
@@ -101,6 +105,8 @@
     "rollup-plugin-dts": "^3.0.2",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
+    "vite": "^2.3.8",
+    "vite-ssr": "^0.10.5",
     "vue-meta": "^2.4.0",
     "vue-router": "^4.0.10",
     "vuetify-loader": "^1.7.2"
