feat(VOverlay): implement activator prop (#14027)

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@octokit/core": "^3.1.2",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "@vue/compiler-sfc": "^3.1.4",
+    "@vue/compiler-sfc": "^3.2.0-beta.7",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "conventional-changelog-cli": "^2.1.1",
@@ -68,7 +68,7 @@
     "semver": "^6.2.0",
     "shelljs": "^0.8.4",
     "typescript": "^4.3.3",
-    "vue": "^3.1.4",
+    "vue": "^3.2.0-beta.7",
     "vue-analytics": "^5.16.1",
     "vue-loader": "^16.1.2",
     "vue-meta": "^2.4.0",
