--- a/packages/api-generator/package.json
+++ b/packages/api-generator/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "deepmerge": "^4.0.0",
     "rimraf": "^3.0.2",
-    "vue": "^3.1.4",
+    "vue": "^3.2.0-beta.7",
     "vuetify": "^3.0.0-alpha.10"
   },
   "devDependencies": {
