--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -114,7 +114,7 @@
     "webpack-dev-server": "^3.7.2"
   },
   "peerDependencies": {
-    "vue": "^3.1.4"
+    "vue": "^3.2.0-beta.7"
   },
   "publishConfig": {
     "access": "public"
