--- a/package.json
+++ b/package.json
@@ -72,12 +72,12 @@
     "vue-analytics": "^5.16.1",
     "vue-loader": "^16.1.2",
     "vue-meta": "^2.4.0",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.0.1",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "4.0.0-beta.3",
-    "webpack-merge": "^5.7.3",
-    "vue-router": "^3.5.1",
-    "vuex": "^3.0.1"
+    "webpack-merge": "^5.7.3"
   },
   "resolutions": {
     "workbox-webpack-plugin": "^5.1.3"
