--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "vue-router": "^3.5.1",
     "vuex": "^3.0.1",
     "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "4.0.0-beta.3",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "4.0.0-rc.0",
     "webpack-merge": "^5.7.3"
   },
   "resolutions": {
