--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -66,8 +66,8 @@
     "cy:run": "cypress run-ct"
   },
   "devDependencies": {
-    "@cypress/vue": "^3.0.1",
-    "@cypress/webpack-dev-server": "^1.3.1",
+    "@cypress/vue": "^3.0.3",
+    "@cypress/webpack-dev-server": "^1.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
@@ -79,7 +79,7 @@
     "@vitejs/plugin-vue": "^1.2.3",
     "@vitejs/plugin-vue-jsx": "^1.1.6",
     "@vue/babel-plugin-jsx": "^1.0.6",
-    "@vue/test-utils": "2.0.0-beta.13",
+    "@vue/test-utils": "2.0.0-rc.12",
     "@vueuse/head": "^0.6.0",
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.0.6",
@@ -90,6 +90,7 @@
     "concurrently": "^4.1.1",
     "cssnano": "^4.1.10",
     "cypress": "^7.4.0",
+    "cypress-file-upload": "^5.0.8",
     "deepmerge": "^4.2.2",
     "dotenv": "^8.0.0",
     "eslint-plugin-cypress": "^2.11.3",
@@ -110,8 +111,7 @@
     "vite-ssr": "^0.11.1",
     "vue-meta": "^2.4.0",
     "vue-router": "^4.0.10",
-    "vuetify-loader": "^1.7.2",
-    "webpack-dev-server": "^3.7.2"
+    "vuetify-loader": "^1.7.2"
   },
   "peerDependencies": {
     "vue": "^3.2.0-beta.7"
