--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "webpack-merge": "^5.7.3"
   },
   "resolutions": {
-    "workbox-webpack-plugin": "^5.1.3"
+    "workbox-webpack-plugin": "^5.1.3",
+    "@vue/test-utils": "2.0.0-rc.9"
   }
 }
