chore: update dependencies

--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -74,23 +74,24 @@
     "@mdi/font": "^5.9.55",
     "@percy/cli": "^1.0.0-beta.58",
     "@percy/cypress": "^3.1.0",
-    "@rollup/plugin-alias": "^3.1.2",
+    "@rollup/plugin-alias": "^3.1.5",
+    "@rollup/plugin-babel": "^5.3.0",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.10",
     "@types/resize-observer-browser": "^0.1.5",
-    "@vitejs/plugin-vue": "^1.2.3",
-    "@vitejs/plugin-vue-jsx": "^1.1.6",
+    "@vitejs/plugin-vue": "^1.6.0",
+    "@vitejs/plugin-vue-jsx": "^1.1.7",
     "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/test-utils": "2.0.0-rc.9",
     "@vueuse/head": "^0.6.0",
-    "autoprefixer": "^10.3.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-add-import-extension": "^1.5.1",
-    "babel-plugin-module-resolver": "^4.0.0",
+    "autoprefixer": "^10.3.2",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-add-import-extension": "^1.6.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-define": "^2.0.0",
     "babel-polyfill": "^6.26.0",
     "concurrently": "^4.1.1",
-    "cssnano": "^4.1.10",
+    "cssnano": "^5.0.8",
     "cypress": "^7.7.0",
     "cypress-file-upload": "^5.0.8",
     "deepmerge": "^4.2.2",
@@ -105,18 +106,19 @@
     "jest-canvas-mock": "^2.3.0",
     "mini-css-extract-plugin": "^1.6.0",
     "postcss-loader": "^5.2.0",
-    "rollup": "^2.52.1",
+    "rollup": "^2.56.3",
     "rollup-plugin-dts": "^3.0.2",
-    "style-loader": "^2.0.0",
+    "rollup-plugin-sass": "^1.2.6",
+    "style-loader": "^3.2.1",
     "url-loader": "^4.1.1",
-    "vite": "^2.4.2",
-    "vite-ssr": "^0.11.1",
+    "vite": "^2.5.1",
+    "vite-ssr": "^0.13.0",
     "vue-meta": "^2.4.0",
-    "vue-router": "^4.0.10",
+    "vue-router": "^4.0.11",
     "vuetify-loader": "^1.7.2"
   },
   "peerDependencies": {
-    "vue": "^3.2.0-beta.7"
+    "vue": "^3.2.6"
   },
   "publishConfig": {
     "access": "public"
