--- a/package.json
+++ b/package.json
@@ -26,20 +26,20 @@
     "yarn": "^1.19"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.14.2",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
     "@babel/helper-regex": "7.10.5",
-    "@babel/preset-env": "^7.14.2",
-    "@babel/preset-typescript": "^7.13.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-typescript": "^7.15.0",
     "@mdi/js": "^5.2.45",
     "@octokit/core": "^3.1.2",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "@vue/compiler-sfc": "^3.2.0-beta.7",
+    "@vue/compiler-sfc": "^3.2.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "conventional-changelog-cli": "^2.1.1",
-    "cross-env": "^7.0.2",
+    "cross-env": "^7.0.3",
     "cross-spawn": "^6.0.5",
     "css-loader": "^5.0.0",
     "css-minimizer-webpack-plugin": "^2.0.0",
@@ -49,10 +49,10 @@
     "eslint-plugin-local-rules": "^0.1.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^7.1.0",
+    "eslint-plugin-vue": "^7.16.0",
     "eslint-plugin-vuetify": "^1.0.1",
     "husky": "^3.0.1",
     "inquirer": "^6.5.0",
@@ -67,17 +67,17 @@
     "sass-loader": "^11.1.0",
     "semver": "^6.2.0",
     "shelljs": "^0.8.4",
-    "typescript": "^4.3.3",
-    "vue": "^3.2.0-beta.7",
+    "typescript": "^4.3.5",
+    "vue": "^3.2.6",
     "vue-analytics": "^5.16.1",
-    "vue-loader": "^16.1.2",
+    "vue-loader": "^16.5.0",
     "vue-meta": "^2.4.0",
-    "vue-router": "^3.5.1",
+    "vue-router": "^3.5.2",
     "vuex": "^3.0.1",
-    "webpack": "^5.37.0",
+    "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "4.0.0-rc.0",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.8.0"
   },
   "resolutions": {
     "workbox-webpack-plugin": "^5.1.3",
