--- a/packages/api-generator/package.json
+++ b/packages/api-generator/package.json
@@ -16,10 +16,10 @@
   "dependencies": {
     "deepmerge": "^4.0.0",
     "rimraf": "^3.0.2",
-    "vue": "^3.2.0-beta.7",
+    "vue": "^3.2.6",
     "vuetify": "^3.0.0-alpha.10"
   },
   "devDependencies": {
-    "@babel/node": "^7.12.1"
+    "@babel/node": "^7.14.9"
   }
 }
