--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -49,12 +49,12 @@
     "dev": "cross-env NODE_ENV=development vite",
     "dev:ssr": "cross-env NODE_ENV=development vite-ssr",
     "dev:webpack": "cross-env NODE_ENV=development webpack serve --config build/webpack.dev.config.js --hot",
-    "build": "concurrently \"yarn build:dist\" \"yarn build:lib\" -n \"dist,lib\" --kill-others-on-fail -r && yarn build:types && yarn build:json",
-    "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config build/config.js --progress",
+    "build": "rimraf lib dist && concurrently \"yarn build:dist\" \"yarn build:lib\" \"yarn build:types\" -n \"dist,lib,types\" --kill-others-on-fail -r && yarn build:json",
+    "build:dist": "rollup --config build/rollup.config.js",
+    "build:lib": "cross-env NODE_ENV=lib babel src --out-dir lib --ignore \"**/__tests__\" --source-maps --extensions \".ts\",\".tsx\",\".snap\" --copy-files --no-copy-ignored --out-file-extension .mjs",
+    "build:types": "rimraf types-temp && tsc --pretty --emitDeclarationOnly -p tsconfig.dist.json && rollup --config build/rollup.types.config.js && rimraf types-temp",
     "build:json": "node build/build-json.js",
-    "build:types": "rimraf types-temp && tsc --pretty --emitDeclarationOnly -p tsconfig.dist.json && rollup --config build/rollup.config.js && rimraf types-temp",
     "tsc": "tsc",
-    "build:lib": "node build/build-lib.js",
     "debug:test": "cross-env NODE_ENV=test node --inspect --inspect-brk ../../node_modules/jest/bin/jest.js --no-cache -i --verbose",
     "test": "node build/run-tests.js",
     "test:unix": "cross-env NODE_ENV=test jest",
@@ -76,6 +76,8 @@
     "@percy/cypress": "^3.1.0",
     "@rollup/plugin-alias": "^3.1.5",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.10",
     "@types/resize-observer-browser": "^0.1.5",
@@ -86,7 +88,7 @@
     "@vueuse/head": "^0.6.0",
     "autoprefixer": "^10.3.2",
     "babel-loader": "^8.2.2",
-    "babel-plugin-add-import-extension": "^1.6.0",
+    "babel-plugin-add-import-extension": "1.5.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-define": "^2.0.0",
     "babel-polyfill": "^6.26.0",
@@ -105,10 +107,13 @@
     "identity-obj-proxy": "^3.0.0",
     "jest-canvas-mock": "^2.3.0",
     "mini-css-extract-plugin": "^1.6.0",
+    "postcss": "^8.3.6",
     "postcss-loader": "^5.2.0",
     "rollup": "^2.56.3",
     "rollup-plugin-dts": "^3.0.2",
     "rollup-plugin-sass": "^1.2.6",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-terser": "^7.0.2",
     "style-loader": "^3.2.1",
     "url-loader": "^4.1.1",
     "vite": "^2.5.1",
