docs: update API page structure (#14069)

--- a/packages/docs/.markdownlintrc
+++ b/packages/docs/.markdownlintrc
@@ -29,6 +29,7 @@
       "home-vuetify-logo",
       "icon-list",
       "inline-ad",
+      "inline-api",
       "kbd",
       "premium-themes",
       "promoted-ad",
