chore: use latest sass

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "lerna": "^3.16.2",
     "mkdirp": "^1.0.4",
     "moment": "^2.27.0",
-    "sass": "~1.32.13",
+    "sass": "^1.38.2",
     "sass-loader": "^11.1.0",
     "semver": "^6.2.0",
     "shelljs": "^0.8.4",
