--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -29,11 +29,11 @@
     "type": "github",
     "url": "https://github.com/sponsors/johnleider"
   },
-  "main": "dist/vuetify.js",
-  "module": "lib/entry.mjs",
+  "main": "lib/framework.mjs",
+  "module": "lib/framework.mjs",
   "jsdelivr": "dist/vuetify.js",
   "unpkg": "dist/vuetify.js",
-  "types": "lib/entry.d.ts",
+  "types": "lib/framework.d.ts",
   "sideEffects": [
     "*.sass",
     "*.scss",
@@ -44,6 +44,30 @@
     "dist/",
     "lib/"
   ],
+  "exports": {
+    ".": {
+      "import": "./lib/framework.mjs",
+      "require": "./dist/vuetify.js"
+    },
+    "./styles": "./lib/styles/main.css",
+    "./styles/*": "./lib/styles/*",
+    "./framework": "./lib/framework.mjs",
+    "./components": "./lib/components/index.mjs",
+    "./components/*": "./lib/components/*/index.mjs",
+    "./directives": "./lib/directives/index.mjs",
+    "./directives/*": "./lib/directives/*/*.mjs",
+    "./composables": "./lib/composables/index.mjs",
+    "./locale": "./lib/locale/index.mjs",
+    "./iconsets/*": "./lib/iconsets/*.mjs",
+    "./*": "./*"
+  },
+  "typesVersions": {
+    "*": {
+      "lib/framework.mjs": ["lib/index.d.ts"],
+      "framework": ["lib/index.d.ts"],
+      "*": ["*", "dist/*", "lib/*", "lib/*.d.ts", "lib/*/index.d.ts"]
+    }
+  },
   "scripts": {
     "watch": "cross-env TARGET=development webpack --config build/config.js --progress --watch",
     "dev": "cross-env NODE_ENV=development vite",
