chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -26,33 +26,32 @@
     "yarn": "^1.19"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.15.0",
+    "@babel/cli": "^7.15.4",
+    "@babel/core": "^7.15.5",
     "@babel/helper-regex": "7.10.5",
-    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-env": "^7.15.4",
     "@babel/preset-typescript": "^7.15.0",
-    "@mdi/js": "^5.2.45",
-    "@octokit/core": "^3.1.2",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "@vue/compiler-sfc": "^3.2.6",
+    "@mdi/js": "^5.9.55",
+    "@octokit/core": "^3.5.1",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "@vue/compiler-sfc": "^3.2.8",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.0",
+    "babel-jest": "^26.6.3",
     "conventional-changelog-cli": "^2.1.1",
     "cross-env": "^7.0.3",
     "cross-spawn": "^6.0.5",
-    "css-loader": "^5.0.0",
+    "css-loader": "^5.2.7",
     "css-minimizer-webpack-plugin": "^2.0.0",
-    "eslint": "^7.11.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-local-rules": "^0.1.1",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-local-rules": "^1.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-sonarjs": "^0.5.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^7.16.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-sonarjs": "^0.10.0",
+    "eslint-plugin-vue": "^7.17.0",
     "eslint-plugin-vuetify": "^1.0.1",
     "husky": "^3.0.1",
     "inquirer": "^6.5.0",
@@ -64,20 +63,20 @@
     "lerna": "^3.16.2",
     "mkdirp": "^1.0.4",
     "moment": "^2.27.0",
-    "sass": "^1.38.2",
-    "sass-loader": "^11.1.0",
+    "sass": "^1.39.0",
+    "sass-loader": "^12.1.0",
     "semver": "^6.2.0",
     "shelljs": "^0.8.4",
-    "typescript": "^4.3.5",
-    "vue": "^3.2.6",
+    "typescript": "^4.4.2",
+    "vue": "^3.2.8",
     "vue-analytics": "^5.16.1",
     "vue-loader": "^16.5.0",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.5.2",
     "vuex": "^3.0.1",
-    "webpack": "^5.51.1",
+    "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "4.0.0-rc.0",
+    "webpack-dev-server": "^4.1.0",
     "webpack-merge": "^5.8.0"
   },
   "resolutions": {
