--- a/package.json
+++ b/package.json
@@ -41,8 +41,6 @@
     "conventional-changelog-cli": "^2.1.1",
     "cross-env": "^7.0.3",
     "cross-spawn": "^6.0.5",
-    "css-loader": "^5.2.7",
-    "css-minimizer-webpack-plugin": "^2.0.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
@@ -64,20 +62,14 @@
     "mkdirp": "^1.0.4",
     "moment": "^2.27.0",
     "sass": "^1.39.0",
-    "sass-loader": "^12.1.0",
     "semver": "^6.2.0",
     "shelljs": "^0.8.4",
     "typescript": "^4.4.2",
     "vue": "^3.2.8",
     "vue-analytics": "^5.16.1",
-    "vue-loader": "^16.5.0",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.5.2",
-    "vuex": "^3.0.1",
-    "webpack": "^5.52.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.1.0",
-    "webpack-merge": "^5.8.0"
+    "vuex": "^3.0.1"
   },
   "resolutions": {
     "workbox-webpack-plugin": "^5.1.3",
