--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -84,7 +84,6 @@
     "watch": "cross-env TARGET=development webpack --config build/config.js --progress --watch",
     "dev": "cross-env NODE_ENV=development vite",
     "dev:ssr": "cross-env NODE_ENV=development vite-ssr",
-    "dev:webpack": "cross-env NODE_ENV=development webpack serve --config build/webpack.dev.config.js --hot",
     "build": "rimraf lib dist && concurrently \"yarn build:dist\" \"yarn build:lib\" \"yarn build:types\" -n \"dist,lib,types\" --kill-others-on-fail -r && yarn build:json",
     "build:dist": "rollup --config build/rollup.config.js",
     "build:lib": "cross-env NODE_ENV=lib babel src --out-dir lib --ignore \"**/__tests__\" --source-maps --extensions \".ts\",\".tsx\",\".snap\" --copy-files --no-copy-ignored --out-file-extension .mjs",
@@ -102,8 +101,8 @@
     "cy:run": "percy exec -- cypress run-ct"
   },
   "devDependencies": {
+    "@cypress/vite-dev-server": "^2.0.8",
     "@cypress/vue": "^3.0.3",
-    "@cypress/webpack-dev-server": "^1.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
@@ -124,7 +123,6 @@
     "@vueuse/head": "^0.6.0",
     "acorn-walk": "^8.1.1",
     "autoprefixer": "^10.3.4",
-    "babel-loader": "^8.2.2",
     "babel-plugin-add-import-extension": "1.6.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-define": "^2.0.0",
@@ -133,31 +131,21 @@
     "cssnano": "^5.0.8",
     "cypress": "^7.7.0",
     "cypress-file-upload": "^5.0.8",
-    "deepmerge": "^4.2.2",
     "dotenv": "^8.0.0",
     "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-jest": "^24.4.0",
-    "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^5.2.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "5.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest-canvas-mock": "^2.3.0",
-    "mini-css-extract-plugin": "^1.6.0",
     "postcss": "^8.3.6",
-    "postcss-loader": "^5.2.0",
     "rollup": "^2.56.3",
     "rollup-plugin-dts": "^4.0.0",
     "rollup-plugin-sass": "^1.2.7",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "style-loader": "^3.2.1",
-    "url-loader": "^4.1.1",
     "vite": "^2.5.3",
     "vite-ssr": "^0.13.1",
     "vue-meta": "^2.4.0",
-    "vue-router": "^4.0.11",
-    "vuetify-loader": "^1.7.2"
+    "vue-router": "^4.0.11"
   },
   "peerDependencies": {
     "vue": "^3.2.8"
