--- a/package.json
+++ b/package.json
@@ -19,58 +19,58 @@
     "version": "node scripts/confirm-npm-tag.js",
     "prepare": "node scripts/post-install.js",
     "postversion": "node scripts/post-release-merge.js",
-    "clean": "lerna clean"
+    "clean": "lerna clean",
+    "all-checks": "yarn lint && lerna run test && lerna run cy:run && yarn build"
   },
   "engines": {
     "node": ">=12",
     "yarn": "^1.19"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.15.5",
-    "@babel/helper-regex": "7.10.5",
-    "@babel/preset-env": "^7.15.4",
-    "@babel/preset-typescript": "^7.15.0",
-    "@mdi/js": "6.2.95",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
     "@mdi/font": "6.2.95",
+    "@mdi/js": "6.2.95",
     "@mdi/svg": "6.2.95",
     "@octokit/core": "^3.5.1",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
-    "@vue/compiler-sfc": "^3.2.19",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "@vue/compiler-sfc": "^3.2.22",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "conventional-changelog-cli": "^2.1.1",
     "cross-env": "^7.0.3",
     "cross-spawn": "^6.0.5",
-    "eslint": "^7.32.0",
+    "eslint": "^8.2.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-formatter-codeframe": "^7.32.1",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-local-rules": "^1.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-sonarjs": "^0.10.0",
-    "eslint-plugin-vue": "^7.17.0",
-    "eslint-plugin-vuetify": "^1.0.1",
+    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vuetify": "^1.1.0",
     "husky": "^3.0.1",
     "inquirer": "^6.5.0",
-    "jest": "^26.6.0",
-    "jest-cli": "^26.6.0",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
     "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom-fourteen": "^1.0.1",
     "jest-serializer-html": "^7.0.0",
-    "lerna": "^3.16.2",
+    "lerna": "^3.22.1",
     "mkdirp": "^1.0.4",
     "moment": "^2.27.0",
-    "sass": "^1.39.0",
+    "sass": "^1.43.4",
     "semver": "^6.2.0",
     "shelljs": "^0.8.4",
-    "typescript": "^4.4.2",
-    "vue": "^3.2.19",
+    "typescript": "^4.4.4",
+    "vue": "^3.2.22",
     "vue-analytics": "^5.16.1",
     "vue-meta": "^2.4.0",
-    "vue-router": "^3.5.2",
     "vuex": "^3.0.1"
   },
   "resolutions": {
