--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "version": "node scripts/confirm-npm-tag.js",
     "prepare": "node scripts/post-install.js",
     "postversion": "node scripts/post-release-merge.js",
-    "clean": "lerna clean"
+    "clean": "lerna clean",
+    "changelog": "conventional-changelog -u -p vuetify"
   },
   "engines": {
     "node": ">=12",
@@ -34,8 +35,8 @@
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.12.1",
-    "@mdi/js": "6.2.95",
     "@mdi/font": "6.2.95",
+    "@mdi/js": "6.2.95",
     "@mdi/svg": "6.2.95",
     "@octokit/core": "^3.1.2",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
@@ -43,6 +44,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "conventional-changelog-cli": "^2.1.1",
+    "conventional-changelog-vuetify": "^1.0.0",
     "cross-env": "^7.0.2",
     "cross-spawn": "^6.0.5",
     "css-loader": "^3.1.0",
