--- a/packages/api-generator/package.json
+++ b/packages/api-generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vuetify/api-generator",
-  "version": "3.0.0-alpha.13",
+  "version": "3.0.0-beta.0",
   "private": true,
   "description": "",
   "main": "src/index.js",
@@ -17,7 +17,7 @@
     "deepmerge": "^4.0.0",
     "rimraf": "^3.0.2",
     "vue": "^3.2.22",
-    "vuetify": "^3.0.0-alpha.13"
+    "vuetify": "^3.0.0-beta.0"
   },
   "devDependencies": {
     "@babel/node": "^7.16.0"
