chore: update dependencies

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -14,53 +14,54 @@
     "build": "vite-ssg build",
     "preview": "vite preview",
     "preview-https": "HTTPS=true vite preview",
-    "lint": "tsc -p tsconfig.json --noEmit --pretty && yarn lint:md && jest --no-cache --maxWorkers=50%",
+    "lint": "vue-tsc --noEmit --pretty && yarn lint:md && jest --no-cache --maxWorkers=50%",
     "lint:fix": "yarn fix:md && JEST_FIX=true jest --no-cache --maxWorkers=50%",
     "lint:md": "markdownlint --config .markdownlintrc src/pages/en",
     "fix:md": "markdownlint --config .markdownlintrc src/pages/en --fix"
   },
   "dependencies": {
-    "@vueuse/head": "~0.6.0",
-    "cosmicjs": "^4.1.2",
+    "@vueuse/head": "~0.7.5",
+    "cosmicjs": "^4.1.5",
     "lodash-es": "^4.17.21",
-    "pinia": "^2.0.6",
+    "pinia": "^2.0.13",
     "prism-theme-vars": "^0.2.2",
-    "prismjs": "^1.25.0",
+    "prismjs": "^1.27.0",
     "roboto-fontface": "^0.10.0",
-    "vue": "^3.2.22",
-    "vue-i18n": "^9.2.0-beta.23",
+    "vue": "^3.2.31",
+    "vue-i18n": "^9.2.0-beta.34",
     "vue-prism-component": "^2.0.0",
     "vuetify": "^3.0.0-beta.0"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^3.2.1",
-    "@types/lodash-es": "^4.17.5",
+    "@types/lodash-es": "^4.17.6",
     "@types/markdown-it": "^12.2.3",
-    "@types/prismjs": "^1.16.6",
+    "@types/prismjs": "^1.26.0",
     "@types/rimraf": "^3.0.2",
-    "@vitejs/plugin-vue": "^2.0.1",
-    "@vue/compiler-sfc": "^3.2.26",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "@vue/compiler-sfc": "^3.2.31",
     "@vuetify/vite-ssg": "^0.18.0",
-    "ajv": "^8.8.2",
+    "ajv": "^8.11.0",
     "front-matter": "^4.0.2",
     "jest": "^26.6.3",
     "jest-runner-eslint": "^1.0.0",
     "jest-silent-reporter": "^0.5.0",
     "markdown-it": "^12.3.0",
     "markdown-it-anchor": "^8.4.1",
-    "markdown-it-attrs": "^4.1.0",
+    "markdown-it-attrs": "^4.1.3",
     "markdown-it-header-sections": "^1.0.0",
     "markdown-it-link-attributes": "^3.0.0",
     "markdown-it-meta": "^0.0.1",
-    "markdown-it-prism": "^2.2.1",
+    "markdown-it-prism": "^2.2.3",
     "markdownlint-cli": "^0.30.0",
-    "unplugin-vue-components": "^0.17.9",
-    "vite": "^2.7.2",
-    "vite-plugin-fonts": "^0.2.2",
-    "vite-plugin-md": "^0.11.6",
-    "vite-plugin-pages": "^0.19.3",
-    "vite-plugin-pwa": "^0.11.11",
-    "vite-plugin-vue-layouts": "^0.5.0",
+    "unplugin-vue-components": "^0.18.5",
+    "vite": "^2.9.1",
+    "vite-plugin-fonts": "^0.3.0",
+    "vite-plugin-md": "^0.12.4",
+    "vite-plugin-pages": "^0.22.0",
+    "vite-plugin-pwa": "^0.11.13",
+    "vite-plugin-vue-layouts": "^0.6.0",
+    "vue-tsc": "^0.33.9",
     "workbox-window": "^6.4.2"
   },
   "publishConfig": {
