--- a/package.json
+++ b/package.json
@@ -28,54 +28,52 @@
     "yarn": "^1.19"
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@mdi/font": "6.2.95",
     "@mdi/js": "6.2.95",
     "@mdi/svg": "6.2.95",
-    "@octokit/core": "^3.5.1",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
-    "@vue/compiler-sfc": "^3.2.22",
+    "@octokit/core": "^3.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "@vue/compiler-sfc": "^3.2.31",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
-    "conventional-changelog-cli": "^2.1.1",
+    "conventional-changelog-cli": "^2.2.2",
     "conventional-changelog-vuetify": "^1.0.0",
     "cross-env": "^7.0.3",
     "cross-spawn": "^6.0.5",
-    "eslint": "^8.2.0",
+    "eslint": "^8.12.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-formatter-codeframe": "^7.32.1",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-local-rules": "^1.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.1",
-    "eslint-plugin-react": "^7.27.0",
-    "eslint-plugin-sonarjs": "^0.10.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-sonarjs": "^0.13.0",
+    "eslint-plugin-vue": "^8.5.0",
     "eslint-plugin-vuetify": "^1.1.0",
     "husky": "^3.0.1",
-    "inquirer": "^6.5.0",
+    "inquirer": "^6.5.2",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
     "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom-fourteen": "^1.0.1",
-    "jest-serializer-html": "^7.0.0",
+    "jest-serializer-html": "^7.1.0",
     "lerna": "^3.22.1",
     "mkdirp": "^1.0.4",
     "moment": "^2.27.0",
-    "sass": "^1.43.4",
+    "sass": "^1.49.10",
     "semver": "^6.2.0",
-    "shelljs": "^0.8.4",
-    "typescript": "^4.4.4",
-    "vite-plugin-inspect": "^0.3.11",
-    "vue": "^3.2.22",
+    "shelljs": "^0.8.5",
+    "typescript": "^4.6.3",
+    "vite-plugin-inspect": "^0.4.3",
+    "vue": "^3.2.31",
     "vue-analytics": "^5.16.1",
-    "vue-meta": "^2.4.0",
-    "vue-router": "^4.0.12",
-    "vuex": "^3.0.1"
+    "vue-router": "^4.0.14"
   },
   "resolutions": {
     "@vue/test-utils": "2.0.0-rc.9"
