--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -40,7 +40,7 @@
     "@types/rimraf": "^3.0.2",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/compiler-sfc": "^3.2.31",
-    "@vuetify/vite-ssg": "^0.18.0",
+    "@vuetify/vite-ssg": "^0.19.0",
     "ajv": "^8.11.0",
     "front-matter": "^4.0.2",
     "jest": "^26.6.3",
@@ -62,6 +62,9 @@
     "vite-plugin-pwa": "^0.11.13",
     "vite-plugin-vue-layouts": "^0.6.0",
     "vue-tsc": "^0.33.9",
+    "workbox-precaching": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3",
     "workbox-window": "^6.4.2"
   },
   "publishConfig": {
