--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -124,7 +124,7 @@
     "@vitejs/plugin-vue-jsx": "^1.3.9",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/test-utils": "2.0.0-rc.9",
-    "@vueuse/head": "^0.7.5",
+    "@vueuse/head": "~0.7.6",
     "acorn-walk": "^8.2.0",
     "autoprefixer": "^10.4.4",
     "babel-plugin-add-import-extension": "1.5.1",
@@ -155,7 +155,7 @@
   },
   "peerDependencies": {
     "@formatjs/intl": "^1.0.0 || ^2.0.0",
-    "vue": "^3.2.31",
+    "vue": "^3.2.35",
     "vue-i18n": "^9.0.0"
   },
   "peerDependenciesMeta": {
