--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "version": "node scripts/confirm-npm-tag.js",
     "prepare": "node scripts/post-install.js",
     "postversion": "node scripts/post-release-merge.js",
+    "postinstall": "patch-package",
     "clean": "lerna clean",
     "changelog": "conventional-changelog -u -p vuetify",
     "all-checks": "yarn lint && lerna run test && lerna run cy:run && yarn build"
@@ -28,33 +29,33 @@
     "yarn": "^1.19"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
     "@mdi/font": "6.2.95",
     "@mdi/js": "6.2.95",
     "@mdi/svg": "6.2.95",
     "@octokit/core": "^3.6.0",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "@vue/compiler-sfc": "^3.2.35",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "@vue/compiler-sfc": "^3.2.36",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "conventional-changelog-cli": "^2.2.2",
     "conventional-changelog-vuetify": "^1.0.0",
     "cross-env": "^7.0.3",
     "cross-spawn": "^6.0.5",
-    "eslint": "^8.12.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint": "^8.16.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-formatter-codeframe": "^7.32.1",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-local-rules": "^1.1.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-sonarjs": "^0.13.0",
-    "eslint-plugin-vue": "^8.5.0",
+    "eslint-plugin-vue": "^9.0.1",
     "eslint-plugin-vuetify": "^1.1.0",
     "husky": "^3.0.1",
     "inquirer": "^6.5.2",
@@ -65,17 +66,15 @@
     "jest-serializer-html": "^7.1.0",
     "lerna": "^3.22.1",
     "mkdirp": "^1.0.4",
-    "moment": "^2.27.0",
-    "sass": "^1.49.10",
+    "moment": "^2.29.3",
+    "patch-package": "^6.4.7",
+    "sass": "^1.52.1",
     "semver": "^6.2.0",
     "shelljs": "^0.8.5",
-    "typescript": "^4.6.3",
+    "typescript": "^4.7.2",
     "vite-plugin-inspect": "^0.4.3",
-    "vue": "^3.2.35",
+    "vue": "^3.2.36",
     "vue-analytics": "^5.16.1",
-    "vue-router": "^4.0.14"
-  },
-  "resolutions": {
-    "@vue/test-utils": "2.0.0-rc.9"
+    "vue-router": "^4.0.15"
   }
 }
