--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -105,36 +105,36 @@
     "cy:run": "percy exec -- cypress run-ct"
   },
   "devDependencies": {
-    "@cypress/vite-dev-server": "^2.2.2",
-    "@cypress/vue": "^3.1.1",
-    "@formatjs/intl": "^2.1.1",
+    "@cypress/vite-dev-server": "^2.2.3",
+    "@cypress/vue": "^3.1.2",
+    "@formatjs/intl": "^2.2.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
-    "@percy/cli": "^1.0.0-beta.76",
+    "@percy/cli": "^1.2.1",
     "@percy/cypress": "^3.1.1",
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.11.26",
     "@types/resize-observer-browser": "^0.1.7",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vitejs/plugin-vue-jsx": "^1.3.9",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vue/babel-plugin-jsx": "^1.1.1",
-    "@vue/test-utils": "2.0.0-rc.9",
+    "@vue/test-utils": "2.0.0",
     "@vueuse/head": "~0.7.6",
     "acorn-walk": "^8.2.0",
-    "autoprefixer": "^10.4.4",
+    "autoprefixer": "^10.4.7",
     "babel-plugin-add-import-extension": "1.5.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-define": "^2.0.1",
     "babel-polyfill": "^6.26.0",
     "concurrently": "^4.1.1",
-    "cssnano": "^5.1.6",
+    "cssnano": "^5.1.10",
     "cy-mobile-commands": "^0.3.0",
-    "cypress": "^9.5.3",
+    "cypress": "^9.7.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-real-events": "^1.7.0",
     "dotenv": "^8.6.0",
@@ -142,20 +142,20 @@
     "eslint-plugin-jest": "^25.7.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-canvas-mock": "^2.3.1",
-    "postcss": "^8.4.12",
-    "rollup": "^2.70.1",
-    "rollup-plugin-dts": "^4.2.0",
+    "postcss": "^8.4.14",
+    "rollup": "^2.75.3",
+    "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-sass": "^1.2.12",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "vite": "^2.9.1",
-    "vite-ssr": "^0.15.0",
-    "vue-i18n": "^9.2.0-beta.34",
-    "vue-router": "^4.0.14"
+    "vite": "^2.9.9",
+    "vite-ssr": "^0.16.0",
+    "vue-i18n": "^9.2.0-beta.35",
+    "vue-router": "^4.0.15"
   },
   "peerDependencies": {
     "@formatjs/intl": "^1.0.0 || ^2.0.0",
-    "vue": "^3.2.35",
+    "vue": "^3.2.36",
     "vue-i18n": "^9.0.0"
   },
   "peerDependenciesMeta": {
