--- a/.vercelignore
+++ b/.vercelignore
@@ -1,8 +1,6 @@
 node_modules
-packages/api-generator/dist
-packages/docs/dist
-packages/vuetify/coverage
-packages/vuetify/dist
-packages/vuetify/es5
-packages/vuetify/lib
-packages/vuetify/lib-temp
+/scripts
+/packages/vuetify
+/packages/api-generator
+/packages/docs/src
+!/packages/docs/dist
