--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,35 @@
       "destination": "/_fallback"
     }
   ],
+  "headers": [
+    {
+      "source": "/service-worker.js",
+      "headers" : [
+        {
+          "key" : "Cache-Control",
+          "value" : "public, max-age=0, must-revalidate"
+        }
+      ]
+    },
+    {
+      "source": "[a-z0-9]{8}\\.(js|css)",
+      "headers" : [
+        {
+          "key" : "Cache-Control",
+          "value" : "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)",
+      "headers" : [
+        {
+          "key" : "Cache-Control",
+          "value" : "public, max-age=3600, must-revalidate"
+        }
+      ]
+    }
+  ],
   "github": {
     "enabled": false,
     "autoAlias": false,
