--- a/vercel.json
+++ b/vercel.json
@@ -35,7 +35,7 @@
       ]
     },
     {
-      "source": "[a-z0-9]{8}\\.(js|css)",
+      "source": "[a-z0-9]{8}\\.(js|css)(\\.map)?",
       "headers" : [
         {
           "key" : "Cache-Control",
