chore(docs): set cache-control headers on .map files

--- a/vercel.json
+++ b/vercel.json
@@ -27,7 +27,7 @@
       ]
     },
     {
-      "source": "[a-z0-9]{8}\\.(js|css)",
+      "source": "[a-z0-9]{8}\\.(js|css)(\\.map)?",
       "headers" : [
         {
           "key" : "Cache-Control",
