--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vuetify",
   "description": "Vue Material Component Framework",
-  "version": "3.0.0-beta.3",
+  "version": "3.0.0-beta.4",
   "author": {
     "name": "John Leider",
     "email": "john@vuetifyjs.com"
@@ -155,10 +155,10 @@
   },
   "peerDependencies": {
     "@formatjs/intl": "^1.0.0 || ^2.0.0",
+    "vite-plugin-vuetify": "1.0.0-alpha.12",
     "vue": "^3.2.0",
     "vue-i18n": "^9.0.0",
-    "webpack-plugin-vuetify": "2.0.0-alpha.11",
-    "vite-plugin-vuetify": "1.0.0-alpha.12"
+    "webpack-plugin-vuetify": "2.0.0-alpha.11"
   },
   "peerDependenciesMeta": {
     "vue-i18n": {
