--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -101,18 +101,16 @@
     "test:coverage": "yarn test --coverage",
     "lint": "concurrently -n \"tsc,eslint\" --kill-others-on-fail \"tsc -p tsconfig.checks.json --noEmit --pretty\" \"eslint src -f codeframe --max-warnings 0\"",
     "lint:fix": "concurrently -n \"tsc,eslint\" \"tsc -p tsconfig.checks.json --noEmit --pretty\" \"eslint --fix src\"",
-    "cy:open": "cypress open-ct",
-    "cy:run": "percy exec -- cypress run-ct"
+    "cy:open": "cypress open --component -b chrome",
+    "cy:run": "percy exec -- cypress run --component"
   },
   "devDependencies": {
-    "@cypress/vite-dev-server": "^2.2.3",
-    "@cypress/vue": "^3.1.2",
     "@formatjs/intl": "^2.2.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
-    "@percy/cli": "^1.2.1",
-    "@percy/cypress": "^3.1.1",
+    "@percy/cli": "^1.3.1",
+    "@percy/cypress": "^3.1.2",
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
@@ -134,7 +132,7 @@
     "concurrently": "^4.1.1",
     "cssnano": "^5.1.10",
     "cy-mobile-commands": "^0.3.0",
-    "cypress": "^9.7.0",
+    "cypress": "^10.2.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-real-events": "^1.7.0",
     "dotenv": "^8.6.0",
