--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -153,10 +153,10 @@
   },
   "peerDependencies": {
     "@formatjs/intl": "^1.0.0 || ^2.0.0",
-    "vite-plugin-vuetify": "1.0.0-alpha.12",
+    "vite-plugin-vuetify": "^1.0.0-alpha.12",
     "vue": "^3.2.0",
     "vue-i18n": "^9.0.0",
-    "webpack-plugin-vuetify": "2.0.0-alpha.11"
+    "webpack-plugin-vuetify": "^2.0.0-alpha.11"
   },
   "peerDependenciesMeta": {
     "vue-i18n": {
