--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -28,6 +28,7 @@
     "prismjs": "^1.28.0",
     "roboto-fontface": "^0.10.0",
     "vue": "^3.2.36",
+    "vue-gtag-next": "^1.14.0",
     "vue-i18n": "^9.2.0-beta.35",
     "vue-prism-component": "^2.0.0",
     "vuetify": "^3.0.0-beta.7"
