feat: add blueprints to package exports (#15646)

--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -55,6 +55,8 @@
     "./styles": "./lib/styles/main.css",
     "./styles/*": "./lib/styles/*",
     "./framework": "./lib/framework.mjs",
+    "./blueprints": "./lib/blueprints/index.mjs",
+    "./blueprints/*": "./lib/blueprints/*.mjs",
     "./components": "./lib/components/index.mjs",
     "./components/*": "./lib/components/*/index.mjs",
     "./directives": "./lib/directives/index.mjs",
