--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mdi/font": "6.2.95",
     "@mdi/js": "6.2.95",
     "@mdi/svg": "6.2.95",
+    "@octokit/core": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "@vue/compiler-sfc": "^3.2.36",
