chore: update to vite 3

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -30,21 +30,22 @@
     "roboto-fontface": "^0.10.0",
     "vue": "^3.2.36",
     "vue-gtag-next": "^1.14.0",
-    "vue-i18n": "^9.2.0-beta.35",
+    "vue-i18n": "^9.2.2",
     "vue-prism-component": "^2.0.0",
     "vuetify": "^3.0.0-beta.9"
   },
   "devDependencies": {
-    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@types/lodash-es": "^4.17.6",
     "@types/markdown-it": "^12.2.3",
     "@types/prismjs": "^1.26.0",
     "@types/rimraf": "^3.0.2",
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-vue": "^3.0.3",
     "@vue/compiler-sfc": "^3.2.36",
     "@vuetify/vite-ssg": "^0.19.0",
     "ajv": "^8.11.0",
     "front-matter": "^4.0.2",
+    "happy-dom": "^6.0.4",
     "jest": "^26.6.3",
     "jest-runner-eslint": "^1.0.1",
     "jest-silent-reporter": "^0.5.0",
@@ -58,12 +59,12 @@
     "markdown-it-prism": "^2.2.4",
     "markdownlint-cli": "^0.31.1",
     "unplugin-vue-components": "^0.19.6",
-    "vite": "^2.9.9",
-    "vite-plugin-fonts": "^0.4.0",
-    "vite-plugin-md": "^0.17.4",
+    "vite": "^3.0.9",
+    "vite-plugin-fonts": "^0.6.0",
+    "vite-plugin-md": "^0.20.2",
     "vite-plugin-pages": "^0.25.0",
-    "vite-plugin-pwa": "^0.12.0",
-    "vite-plugin-vue-layouts": "^0.6.0",
+    "vite-plugin-pwa": "^0.12.3",
+    "vite-plugin-vue-layouts": "^0.7.0",
     "vite-plugin-vuetify": "^1.0.0-alpha.14",
     "vue-tsc": "^0.35.2",
     "workbox-precaching": "^6.5.3",
