--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -120,8 +120,8 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^16.11.26",
     "@types/resize-observer-browser": "^0.1.7",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vitejs/plugin-vue-jsx": "^2.0.0",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/test-utils": "2.0.0",
     "@vueuse/head": "~0.7.6",
@@ -148,9 +148,9 @@
     "rollup-plugin-sass": "^1.2.12",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "vite": "^2.9.9",
+    "vite": "^3.0.9",
     "vite-ssr": "^0.16.0",
-    "vue-i18n": "^9.2.0-beta.35",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.15"
   },
   "peerDependencies": {
