--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -14,8 +14,8 @@
     "build": "vite-ssg build",
     "preview": "vite preview",
     "preview-https": "HTTPS=true vite preview",
-    "lint": "vue-tsc --noEmit --pretty && yarn lint:md && jest --no-cache --maxWorkers=50%",
-    "lint:fix": "yarn fix:md && JEST_FIX=true jest --no-cache --maxWorkers=50%",
+    "lint": "vue-tsc --noEmit --pretty && yarn lint:md && jest --no-cache",
+    "lint:fix": "yarn fix:md && JEST_FIX=true jest --no-cache",
     "lint:md": "markdownlint --config .markdownlintrc src/pages/en",
     "fix:md": "markdownlint --config .markdownlintrc src/pages/en --fix"
   },
