feat: add vuetify/settings and vuetify/styles sass exports

--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -45,6 +45,9 @@
   "files": [
     "dist/",
     "lib/",
+    "_settings.scss",
+    "_styles.scss",
+    "_tools.scss",
     "CHANGELOG.md"
   ],
   "exports": {
