fix: generate types for all components
fixes #15699

--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -143,8 +143,10 @@
     "dotenv": "^8.6.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^25.7.0",
+    "fast-glob": "^3.2.11",
     "identity-obj-proxy": "^3.0.0",
     "jest-canvas-mock": "^2.3.1",
+    "micromatch": "^4.0.5",
     "postcss": "^8.4.14",
     "rollup": "^2.75.3",
     "rollup-plugin-dts": "^4.2.2",
