--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -78,6 +78,14 @@ jobs:
         with:
           ref: next
           fetch-depth: 0
+      - run: |
+          last=$(git show -s --format=%ct HEAD)
+          now=$(date +%s)
+          diff=$(($now - $last))
+          if [ $diff -gt 86400 ]; then
+              echo "Last commit was more than 24 hours ago, skipping tests"
+              exit 1
+          fi
       - uses: actions/cache@v2
         with:
           path: |
