--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -43,6 +43,7 @@
     "@types/rimraf": "^3.0.2",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/compiler-sfc": "^3.2.38",
+    "@vuetify/api-generator": "^3.0.0-beta.13",
     "@vuetify/vite-ssg": "^0.19.0",
     "ajv": "^8.11.0",
     "front-matter": "^4.0.2",
