--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@typescript-eslint/parser": "^5.26.0",
     "@vue/compiler-sfc": "^3.2.38",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^28.1.3",
     "conventional-changelog-cli": "^2.2.2",
     "conventional-changelog-vuetify": "^1.0.0",
     "cross-env": "^7.0.3",
@@ -59,10 +59,9 @@
     "eslint-plugin-vuetify": "^1.1.0",
     "husky": "^3.0.1",
     "inquirer": "^6.5.2",
-    "jest": "^26.6.3",
-    "jest-cli": "^26.6.3",
-    "jest-css-modules": "^2.1.0",
-    "jest-environment-jsdom-fourteen": "^1.0.1",
+    "jest": "^28.1.3",
+    "jest-cli": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "jest-serializer-html": "^7.1.0",
     "lerna": "^3.22.1",
     "mkdirp": "^1.0.4",
